# programgarden

./: .gitignore  CLAUDE.md  PROJECT_MAP.md  README.md  SUMMARY.md  conftest.py  phase3-condition-verification-plan.md  phase4-condition-backtest-refactor.md  programgarden_llms_v1.txt  pyproject.toml  turtle_strategy_full.txt
src/community/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/community/programgarden_community/: __init__.py  nodes_registry.py  plugins.py
src/community/programgarden_community/nodes/: __init__.py
src/community/programgarden_community/plugins/: __init__.py  _ta_common.py
src/community/programgarden_community/strategies/: __init__.py
src/community/tests/: test_adx_plugin.py  test_aroon_plugin.py  test_atr_plugin.py  test_beta_hedge_plugin.py  test_breakout_retest_plugin.py  test_calendar_spread_plugin.py  test_calmar_ratio_plugin.py  test_cci_plugin.py  test_cmf_plugin.py  test_cmo_plugin.py  test_community_node_metadata.py  test_connors_rsi_plugin.py  test_contango_backwardation_plugin.py  test_coppock_curve_plugin.py  test_correlation_analysis_plugin.py  test_correlation_guard_plugin.py  test_dcf_fair_value_plugin.py  test_doji_plugin.py  test_drawdown_protection_plugin.py  test_dynamic_stop_loss_plugin.py  test_elder_ray_plugin.py  test_engulfing_plugin.py  test_ev_ebitda_screen_plugin.py  test_fear_greed_node.py  test_file_reader_node.py  test_fisher_transform_plugin.py  test_fundamental_data_node.py  test_golden_ratio_plugin.py  test_graham_number_plugin.py  test_hammer_plugin.py  test_heikin_ashi_plugin.py  test_hurst_exponent_plugin.py  test_ichimoku_plugin.py  test_kdj_plugin.py  test_kelly_criterion_plugin.py  test_keltner_plugin.py  test_level_touch_plugin.py  test_macd_data_flow.py  test_macd_plugin.py  test_magic_formula_plugin.py  (+47 more)
src/core/: CHANGELOG.md  README.md  pyproject.toml
src/core/programgarden_core/: __init__.py  alias_resolver.py  code_node.py  exceptions.py  korea_alias.py  logs.py  retry_executor.py
src/core/programgarden_core/bases/: __init__.py  base.py  cancel_orders.py  client.py  components.py  listener.py  mixins.py  modify_orders.py  sql.py  (+5 more)
src/core/tests/: test_code_node.py  test_code_node_security.py  test_dynamic_node_registry.py  test_exceptions.py  test_exclusion_list_node.py  test_expression_namespace.py  test_fundamental_node.py  test_i18n_locale_parity.py  test_if_node.py  test_items_extract.py  test_korea_stock_nodes.py  test_market_external.py  test_market_status_node.py  test_node_schema_ai_fields.py  test_node_schema_completeness.py  test_node_version_metadata.py  test_notification_event.py  test_order_diagnostics.py  test_plugin_dynamic_register.py  test_plugin_output_fields.py  test_retry_executor.py  test_sticky_note.py  test_validation_models.py  test_widget_schema.py  test_workflow_dag.py
src/programgarden/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_credential_inject.py  test_display_debug.py  test_screener.py  test_sse_timing.py  test_workflow_suite.py
src/programgarden/example/: auto_overseas_stock.py  cancel_order_overseas_futures.py  custom_10sec_strategy.py  example_overseas_futures.py  example_overseas_stock.py  modify_order_overseas_futures.py  multi_nesting_overseas_stock_example.py  new_order_overseasfutures.py  no_nesting_overseas_futures_example.py  programgarden_example.py  programgarden_example_future.py  single_nesting_overseas_futures_example.py  single_nesting_overseas_stock_example.py  turtle_overseas_stock.py
src/programgarden/example_web/: app.py  last_run_config.json  requirements.txt
src/programgarden/examples/: .env.example  01_start_only.py  02_start_schedule.py  03_start_schedule_trading_hours.py  06_single_condition.py  07_multi_condition.py  08_weighted_condition.py  09_at_least_condition.py  10_nested_logic.py  11_market_order.py  12_limit_order.py  13_position_sizing.py  14_modify_order.py  15_cancel_order.py  16_buy_sell_basic.py  17_screener_to_order.py  19_error_handler.py  20_risk_guard.py  21_group_node.py  22_trading_hours.py  23_pause_resume.py  24_state_snapshot.py  25_multi_market.py  26_long_running.py  27_24h_full_autonomous.py  28_backtest_simple.py  29_backtest_with_deploy.py  30_scheduled_backtest_job_control.py  31_plugin_test.py  32_account_holdings_ma_trend_backtest.py  33_supabase_postgres.py  README.md  __init__.py  debug_realaccount_stock.py  test_condition_nodes.py  test_connection_binding.py  test_connection_production.py  test_dynamic_node_real.py  test_futures_price.py  test_ovc_direct.py  (+6 more)
src/programgarden/programgarden/: __init__.py  binding_validator.py  buysell_executor.py  client.py  code_worker.py  condition_executor.py  context.py  deep_fixtures.py  executor.py  node_runner.py  pg_listener.py  plugin_resolver.py  real_order_executor.py  reconnect_handler.py  resolver.py  semantic_rules.py  symbols_provider.py  system_executor.py  system_keys.py  validation_recommender.py
src/programgarden/tests/: check_futures_master.py  conftest.py  test_a3_auto_iterate_rate_limit.py  test_a4_order_idempotency.py  test_account_balance.py  test_account_pnl_listener.py  test_ai_agent.py  test_auto_iterate_chain.py  test_binding_validator.py  test_c8_reconnect_reconcile.py  test_checkpoint_manager.py  test_code_node_execution.py  test_community_node_snippets.py  test_condition_executor.py  test_condition_nodes.py  test_connection_production.py  test_connection_rules.py  test_context_dag.py  test_credential_sell.py  test_deep_validate.py  test_deep_validate_ai_node.py  test_dfs_execution_order.py  test_dry_run.py  test_dynamic_node_execution.py  test_examples_validation.py  test_exchange_value_contract.py  test_exclusion_list_node.py  test_executor_job_id.py  test_executor_kwargs.py  test_file_reader_executor.py  test_fundamental_node.py  test_futures_contract_node.py  test_futures_master.py  test_futures_micro.py  test_get_state_diagnostics.py  test_graceful_restart.py  test_gsc_direct.py  test_hard_failure_raises.py  test_historical.py  test_hkex_futures_bot.py  (+58 more)
src/programgarden/webapp/: app.py  last_run_config.json
(+1500 files in other folders)
