[project]
name = "programgarden"
version = "0.1.2"
description = "코딩을 처음 배우는 사람들도 LS증권API를 쉽게 사용하도록 만든 오픈소스"
authors = [
    {name = "장용준",email = "coding@programgarden.com"}
]
homepage = "https://programgarden.com"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["LS증권", "finance", "trading"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
requests = ">=2.32.3,<3.0.0"
pydantic = ">=2.11.4,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
pep8-naming = "^0.15.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
