[project]
authors = [
    {"name" = "프로그램동산", "email" = "coding@programgarden.com"}
]
homepage = "https://programgarden.com"
requires-python = ">=3.12"
name = "programgarden-community"
version = "1.10.4"
description = "ProgramGarden Community - 전략 플러그인 모음"
readme = "README.md"

[tool.poetry]
packages = [
    { include = "programgarden_community" }
]

[tool.poetry.dependencies]
programgarden-core = "^1.9.7"
pypdf = ">=4.0.0"

[tool.poetry.extras]
docx = ["python-docx"]
xlsx = ["openpyxl"]
pdf-tables = ["pdfplumber"]
all-parsers = ["python-docx", "openpyxl", "pdfplumber"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.21.0"
python-docx = "^1.2.0"
openpyxl = "^3.1.5"
pdfplumber = "^0.11.9"


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
