[project]
authors = [
    {"name" = "프로그램동산", "email" = "coding@programgarden.com"}
]
homepage = "https://programgarden.com"
requires-python = ">=3.12"
name = "programgarden-core"
version = "1.9.7"
description = "ProgramGarden Core - 노드 기반 DSL 핵심 타입 정의"
readme = "README.md"

[tool.poetry]
packages = [
    { include = "programgarden_core" }
]

[tool.poetry.dependencies]
pydantic = ">=2.0.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
