[project]
authors = [
    {"name" = "프로그램동산", "email" = "coding@programgarden.com"}
]
homepage = "https://programgarden.com"
requires-python = ">=3.12"
name = "programgarden"
version = "2.0.0"
description = "ProgramGarden - 노드 기반 자동매매 DSL 실행 엔진"
readme = "README.md"

[tool.poetry]
packages = [
    { include = "programgarden" }
]
exclude = ["examples", "tests", "**/__pycache__"]

[tool.poetry.dependencies]
pydantic = ">=2.0.0,<3.0.0"
croniter = "^6.0.0"
python-dotenv = "^1.1.0"
tzdata = "^2025.2"
programgarden-finance = {path = "../finance", develop = true}
programgarden-core = {path = "../core", develop = true}
psycopg2-binary = "^2.9.11"
psutil = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.0.0"
ruff = "^0.1.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
