[project]
authors = [
    {"name" = "프로그램동산", "email" = "coding@programgarden.com"}
]
homepage = "https://programgarden.com"
requires-python = ">=3.12"
name = "programgarden"
version = "1.15.6"
description = "ProgramGarden - 노드 기반 자동매매 DSL 실행 엔진"
readme = "README.md"

[tool.poetry]
packages = [
    { include = "programgarden" }
]
exclude = ["examples", "tests", "**/__pycache__"]

[tool.poetry.dependencies]
pydantic = ">=2.0.0,<3.0.0"
croniter = "^6.0.0"
python-dotenv = "^1.1.0"
tzdata = "^2025.2"
psycopg2-binary = "^2.9.11"
psutil = "^6.0.0"
yfinance = "^0.2.0"
aiohttp = "^3.9.0"
lxml = "^6.0.2"
pytickersymbols = {version = ">=1.17.5", python = ">=3.12,<4.0"}
aiosqlite = "^0.20.0"
litellm = ">=1.40.0"
fastembed = ">=0.4.0"
programgarden-core = "^1.9.5"
programgarden-finance = "^1.4.2"
programgarden-community = "^1.10.3"
    
[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.0.0"
ruff = "^0.1.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
